[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.pytest.ini_options]
markers = [
    "sim: marks tests as reactor simulation (deselect with '-m \"not sim\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

testpaths = [
    "tests"
]

[project]
name = "reactord"
version = "0.0.1b1"
authors = [{name = "Brandolín, Salvador Eduardo", email = "salvadorebrandolin@mi.unc.edu.ar"},
           {name = "Parodi, Adrián", email = "adrian.parodi@mi.unc.edu.ar"},
           {name = "Rovezzi, Juan Pablo", email = "juan.rovezzi@mi.unc.edu.ar"},
           {name = "Santos, Maricel Del Valle", email = "maricel.santos@mi.unc.edu.ar"},
           {name = "Scilipoti, José Antonio", email = "jscilipoti@unc.edu.ar"}]
license = {text = "The MIT License"}
readme = "README.md"
description = "Package for the simulation and design of chemical reactors"
keywords = ["chemical reactor", "reactor design", "reactor simulation", "chemical engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

urls = {Homepage = "https://github.com/SalvadorBrandolin/reactord"}

dependencies = [
    'ipython',
    'dill >= 0.3.6',
    'numpy >= 1.24.3',
    'pandas >= 2.0.1', 
    'scipy >= 1.10.1',
    'sympy >= 1.12',
    'thermo >= 0.2.24',
]
